--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node / Frontend
+node_modules
+dist
+dist-ssr
+*.local
+
+# Tauri
+src-tauri/target
+
+# Environment variables
+.env.local
+.env.production
