--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "http-all", "shell-open"] }
+tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-dir", "fs-read-file", "dialog-open", "dialog-save", "http-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
